--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
 		"3d-react-carousal": "^5.0.0",
 		"axios": "^1.1.3",
 		"bootstrap": "^5.2.2",
+		"moment": "^2.29.4",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.6.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.39.4",
 		"react-icons": "^4.6.0",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.4.3",
