--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-			"bcrypt": "^5.1.0",
+		"@joi/date": "^2.1.0",
+		"bcrypt": "^5.1.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"joi": "^17.6.4",
