--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ MONGO_URI=`mongodb://127.0.0.1:27017/mowaeidy`
 SALTROUND=10
 SIGNiNTOKEN=hassan&gemy
 BERARETOKEN=Bearer
+
+# emailToken=mowaEmail
+SENDEREMAIL=mowaeidy@outlook.com
+SENDERPASSWORD=1234_qwer_1234
