--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.7.0",
 		"nanoid": "^3.3.4",
+		"nodejs-nodemailer-outlook": "^1.2.4",
+		"nodemailer": "^6.8.0",
 		"nodemon": "^2.0.20"
 	}
 }
